<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="@string/reference" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="@string/reference" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="@string/from" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="from" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="@string/status_shipment" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="status" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="@string/created_at" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="status" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="@string/deliver_at" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="status" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="@string/location" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="status" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="Price" />

        <TextView
            android:id="@+id/t7"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratlight"
            android:text="price" />

    </LinearLayout>
</LinearLayout>
